Make OTEL endpoint types self-describing
Each endpoint handler now declares its own service name and front-end
assets, and its resources live in a per-service directory. Adding a
backend no longer means editing the factory switch, the settings JSP's
hardcoded option list and includes, or the JavaScript show/hide chain.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>